styles.css
body{
    background-color: rgb(215, 215, 248);
}

.header {
    display: flex;
    justify-content: center;
}

.players{
    padding-top: 25px;
    padding-bottom: 25px;
    display: flex;  
    align-items: center; 
    justify-content: space-between;
    width: 80%;
}


form{
    display: flex; 
    flex-direction: column;
    align-items: center;
    padding-bottom: 25px;
  }

.gameboard-container{ 
    display: grid;
    gap: 10px;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;

    justify-content: center;
    justify-items: center;
    justify-self: center;

    align-self: center;
    align-items: center;
    align-content: center;
}

.player-square{
    display:flex;
    border: solid 1px;
    margin: 10px;
    width: 200px;
    height: 50px;

    justify-content: center;
    align-items: center;

}

.results{
    display: flex;
    justify-content: center;
    padding-top: 1em;
    font-size:xx-large
}

